--- a/.i3/config
+++ b/.i3/config
@@ -16,7 +16,7 @@
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:Pointfree 10
+font pango: DejaVu Sans Mono 8
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -220,7 +220,7 @@ bindsym Mod1+Shift+b exec systemctl reboot
 
 # autostart
 
-exec --no-startup-id wicd-gtk
+exec --no-startup-id nm-applet
 exec parcellite
 exec xrdb /home/snyp/.Xresources
 exec xcompmgr
