--- a/.i3/config
+++ b/.i3/config
@@ -11,12 +11,12 @@
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-#font pango: Fixed 10
+font pango: TerminessPowerline 10
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -223,6 +223,6 @@ bindsym Mod1+Shift+b exec systemctl reboot
 #exec --no-startup-id nm-applet
 exec parcellite
 exec xrdb /home/snyp/.Xresources
-exec xcompmgr
 exec sh ~/.fehbg
 exec mpd
+
