--- a/.i3/config
+++ b/.i3/config
@@ -22,7 +22,7 @@ font pango: TerminessPowerline 10
 floating_modifier Mod1
 
 # start a terminal
-bindsym Mod1+Return exec termite
+bindsym Mod1+Return exec i3-sensible-terminal
 
 # kill focused window
 bindsym Mod1+Shift+q kill
