--- a/.i3/config
+++ b/.i3/config
@@ -16,7 +16,7 @@
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango: TerminessPowerline 10
+font pango: Source Code Pro for Powerline 10
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -152,10 +152,16 @@ mode "resize" {
 bindsym Mod1+r mode "resize"
 
 # class                 border  backgr. text    indicator
-client.focused          #849492 #59306B #ffffff #2e9ef4
-client.focused_inactive #6e686f #6e686f #f0f0f0 #484e50
-client.unfocused        #6e686f #6e686f #f0f0f0 #292d2e
-client.urgent           #e9e6e6 #BFB8B0 #ffffff #900000
+#client.focused          #849492 #59306B #ffffff #2e9ef4
+#client.focused_inactive #6e686f #6e686f #f0f0f0 #484e50
+#client.unfocused        #6e686f #6e686f #f0f0f0 #292d2e
+#client.urgent           #e9e6e6 #BFB8B0 #ffffff #900000
+
+# class                   border  backgr. text    indicator
+client.focused            #cecece #cecece #2b2b2b #cecece
+client.focused_inactive   #5f676a #5f676a #cecece #5f676a
+client.unfocused          #222222 #222222 #888888 #222222
+client.urgent             #2f343a #900000 #ffffff #900000
 
 # new_window    1pixel                 broadcastM #<normal|1pixel|none|pixel>
 new_window  normal
@@ -168,13 +174,23 @@ hide_edge_borders   both
 # finds out, if available)
 bar {
     status_command i3status
+    #colors {
+    #    statusline #efefef
+    #    background #242424
+    #    focused_workspace #242424 #59306B  #ffffff 
+    #    inactive_workspace #242424 #282828 #CCCACA
+    #    urgent_workspace   #1A1A1A #664742 #1b1b1b
+    #}
     colors {
-        statusline #efefef
-        background #242424
-        focused_workspace #242424 #59306B  #ffffff 
-        inactive_workspace #242424 #282828 #CCCACA
-        urgent_workspace   #1A1A1A #664742 #1b1b1b
-    }
+		background	#1B1B1B
+		statusline	#999999
+
+#                           border  backgr  text
+		focused_workspace	#cccccc #444444 #cccccc
+		active_workspace	#cccccc #444444 #cccccc
+		inactive_workspace	#444444 #1B1B1B #cccccc
+		urgent_workspace	#cccccc #bf3939 #cccccc 
+	}
 }
 
 
