--- a/.termite.config
+++ b/.termite.config
@@ -7,7 +7,7 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = DejaVuSansMono 10
+font = Pointfree 10
 scrollback_lines = 1000
 search_wrap = true
 #icon_name = terminal
@@ -29,26 +29,27 @@ cursor_shape = ibeam
 #modify_other_keys = false
 
 [colors]
-foreground=#ECE8CF
-background=#2D2D2D
-color0=#393939
-color8=#474747
-color1=#EE9379
-color9=#FF8D80
-color2=#E2FFC7
-color10=#DBFFB3
-color3=#FFFFB9
-color11=#FFBE64
-color4=#EDE7B4
-color12=#E15848
-color5=#E2BEB5
-color13=#94C7B5
-color6=#6EB49D
-color14=#A2C3CC
-color7=#dddddd
-color15=#dddddd
+background=#080608
+foreground=#E8EAEC
+cursorColor=#8e9ff0
+color0=#525252
+color1=#BF606B
+color2=#BBBB87
+color3=#876F6A
+color4=#606B6F
+color5=#908C9C
+color6=#88959A
+color7=#E8E5DC
+color8=#707070
+color9=#8A7885
+color10=#BFAF72
+color11=#9F8985
+color12=#9FA6A8
+color13=#AAA7B4
+color14=#AABBC1
+color15=#F5F5EB
 [hints]
-#font = DejaVuSansMono 10
+#font = Pointfree 10
 #foreground = #dcdccc
 #background = #3f3f3f
 #active_foreground = #e68080
