--- a/.i3/config
+++ b/.i3/config
@@ -16,7 +16,7 @@ font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-#font pango: Pointfree 10
+# font pango: pointfree 9
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
