--- a/.termite.config
+++ b/.termite.config
@@ -17,7 +17,7 @@ search_wrap = true
 cursor_blink = off
 
 # "block", "underline" or "ibeam"
-cursor_shape = ibeam
+cursor_shape = underline
 
 # $BROWSER is used by default
 #browser = firefox
