--- a/.termite.config
+++ b/.termite.config
@@ -1,3 +1,4 @@
+
 [options]
 scroll_on_output = false
 scroll_on_keystroke = true
@@ -8,19 +9,19 @@ dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
 font = Pointfree 10
-scrollback_lines = 1000
+scrollback_lines = 10000
 search_wrap = true
 #icon_name = terminal
-#geometry = 640x480
+geometry = 720x480
 
 # "system", "on" or "off"
 cursor_blink = off
 
 # "block", "underline" or "ibeam"
-cursor_shape = underline
+cursor_shape = block
 
-# $BROWSER is used by default
-#browser = firefox
+# $BROWSER is used by default if set, with xdg-open as a fallback
+browser = firefox
 
 # set size hints for the window
 #size_hints = false
@@ -29,34 +30,22 @@ cursor_shape = underline
 #modify_other_keys = false
 
 [colors]
-background=#080608
-foreground=#E8EAEC
-cursorColor=#8e9ff0
-color0=#525252
-color1=#BF606B
-color2=#BBBB87
-color3=#876F6A
-color4=#606B6F
-color5=#908C9C
-color6=#88959A
-color7=#E8E5DC
-color8=#707070
-color9=#8A7885
-color10=#BFAF72
-color11=#9F8985
-color12=#9FA6A8
-color13=#AAA7B4
-color14=#AABBC1
-color15=#F5F5EB
-[hints]
-#font = Pointfree 10
-#foreground = #dcdccc
-#background = #3f3f3f
-#active_foreground = #e68080
-#active_background = #3f3f3f
-#padding = 2
-#border = #3f3f3f
-#border_width = 0.5
-#roundness = 2.0
 
-# vim: ft=dosini cms=#%s
+background = #111111
+foreground = #D3D3D3
+color0 = #21211F
+color8 = #1F1F21
+color1 = #524139
+color9 = #47362e
+color2 = #2C382A
+color10 = #232E22
+color3 = #EC9718
+color11 = #C78016
+color4 = #394A52
+color12 = #2e3f47
+color5 = #80744F
+color13 = #6E664C
+color6 = #5A9096
+color14 = #4F7B80
+color7 = #DBD3C8
+color15 = #C8D0DB
