my sweet pekwm and my sweet vim color scheme and conky too

--- a/.termite.config
+++ b/.termite.config
@@ -31,21 +31,19 @@ browser = firefox
 
 [colors]
 
-background = #111111
-foreground = #D3D3D3
-color0 = #21211F
-color8 = #1F1F21
-color1 = #524139
-color9 = #47362e
-color2 = #2C382A
-color10 = #232E22
-color3 = #EC9718
-color11 = #C78016
-color4 = #394A52
-color12 = #2e3f47
-color5 = #80744F
-color13 = #6E664C
-color6 = #5A9096
-color14 = #4F7B80
-color7 = #DBD3C8
-color15 = #C8D0DB
+foreground = #FFFFFF
+background = #2D2D2D
+color0 = #1A1A1A
+color8 = #686868
+color1 = #FE8181
+color9 = #FB9F9F
+color2 = #35BF5C
+color10 = #6BD689
+color3 = #FFF373
+color11 = #FEF3B2
+color4 = #63ACE5
+color12 = #ADCBE3
+color5 = #AC7BDE
+color13 = #E5B0FF
+color6 = #5DCCC1
+color14 = #96EAD7
