change email in gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Soumik Rakshit
-	email = slnsoumik@gmail.com
+	email = soumikrakshit@yandex.com
 [color]
 	diff = auto
 	status = auto
