this is a nice font really

--- a/.nanorc
+++ b/.nanorc
@@ -54,7 +54,7 @@ set autoindent
 ## Set the line length for wrapping text and justifying paragraphs.
 ## If the value is 0 or less, the wrapping point will be the screen
 ## width less this number.
-# set fill -8
+set fill 80
 
 ## Enable ~/.nano_history for saving and reading search/replace strings.
 set historylog
