--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
 	interactive = auto
 	ui = auto
 [core]
-	editor = /usr/bin/nvim
+	editor = /usr/bin/vim
 
 [gc]
 	auto=1
@@ -21,6 +21,8 @@
 	br = branch
 	cm = commit
 	st = status
+	sm = submodule
+
 
 [alias]
 	b = branch -v
