--- a/.i3status.conf
+++ b/.i3status.conf
@@ -1,4 +1,3 @@
-
 # i3status configuration file.
 # see "man i3status" for documentation.
 
@@ -8,72 +7,51 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        output_format = "i3bar"
-
         colors = true
         interval = 5
-
-        color_bad = "#cf6a4c"
-        color_degraded = "#f9ee98"
-        color_good = "#8f9d6a"
-
-        separator = "  "
 }
 
+order += "ipv6"
 order += "disk /"
-order += "cpu_usage"
-#order += "cpu_temperature 0"
-#order += "wireless _first_"
-order += "battery 1"
-order += "volume master"
+order += "run_watch DHCP"
+order += "run_watch VPN"
+order += "wireless _first_"
+order += "ethernet _first_"
+order += "battery 0"
+order += "load"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "  %essid"
-        format_down = " ---"
+        format_up = "W: (%quality at %essid) %ip"
+        format_down = "W: down"
 }
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
-        format_up = " %ip"
-        format_down = " ---"
+        format_up = "E: %ip (%speed)"
+        format_down = "E: down"
 }
 
-battery 1 {
-        hide_seconds = true
-        integer_battery_capacity = true
-        low_threshold = 15
-        threshold_type = "percentage"
+battery 0 {
         format = "%status %percentage %remaining"
-        status_chr = ""
-        status_bat = ""
-        status_full = ""
+}
+
+run_watch DHCP {
+        pidfile = "/var/run/dhclient*.pid"
+}
+
+run_watch VPN {
+        pidfile = "/var/run/vpnc/pid"
 }
 
 tztime local {
         format = "%Y-%m-%d %H:%M:%S"
 }
 
+load {
+        format = "%1min"
+}
 
 disk "/" {
-        format = " %used/%total"
-        threshold_type = "percentage"
-        low_threshold = 10
+        format = "%avail"
 }
-
-cpu_usage {
-    format = " %usage"
-}
-
-volume master {
-    format = " %volume"
-    format_muted = " %volume"
-    device = "default"
-    mixer = "Master"
-    mixer_idx = 0
-}
-
-#cpu_temperature 0 {
-#    format = " %degrees°C"
-#    max_threshold = 65
-#}
