--- a/.i3/config
+++ b/.i3/config
@@ -184,7 +184,7 @@ hide_edge_borders   both
 bar {
     position bottom
     font pango:creep 12
-    status_command ~/.i3/conky.sh
+    status_command i3status
     tray_output none
 
     colors {
