Add a location comment in most files

--- a/.nanorc
+++ b/.nanorc
@@ -1,3 +1,5 @@
+# ~/.nanorc
+
 ## Sample initialization file for GNU nano.
 ##
 ## Please note that you must have configured nano with --enable-nanorc
