--- a/.i3/config
+++ b/.i3/config
@@ -16,7 +16,7 @@
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:creep 12
+font pango:profont 10
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -151,24 +151,11 @@ mode "resize" {
 
 bindsym Mod1+r mode "resize"
 
-# Hybrid colors
-set $black	#002B36
-set $white	#839496
-set $gray	#CCCCCC
-set $darkgray	#666666
-set $green 	#799F26
-set $blue	#4D73AA
-set $purple	#8473A7
-set $red	#B58900
-set $orange	#E59847
-set $cyan	#2AA198
-set $dark	#00252E
-
-#class                  border  backgr. text    indicator
-client.focused			$white  $white  $dark    $dark
-client.unfocused		$dark   $dark   $white   $white
-client.focused_inactive	$dark   $dark   $white   $dark
-client.urgent			$orange $orange $dark    $white
+# class                 border  backgr. text    indicator
+client.focused          #849492 #59306B #ffffff #2e9ef4
+client.focused_inactive #6e686f #6e686f #f0f0f0 #484e50
+client.unfocused        #6e686f #6e686f #f0f0f0 #292d2e
+client.urgent           #e9e6e6 #BFB8B0 #ffffff #900000
 
 # new_window    1pixel                 broadcastM #<normal|1pixel|none|pixel>
 new_window  normal
@@ -179,23 +166,14 @@ hide_edge_borders   both
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-
-# Bar
 bar {
-    position bottom
-    font pango:creep 12
     status_command i3status
-    tray_output none
-
     colors {
-			statusline	#999999
-			background	$black
-
-        # Colors            border      backgr.     text
-		focused_workspace	$white	 	$white		$black
-        active_workspace	#073642 	#073642 	#696f89
-        inactive_workspace	#073642 	#073642     $white
-        urgent_workspace  	$orange		$orange		$dark
+        statusline #efefef
+        background #242424
+        focused_workspace #242424 #59306B  #ffffff 
+        inactive_workspace #242424 #282828 #CCCACA
+        urgent_workspace   #1A1A1A #664742 #1b1b1b
     }
 }
 # editors
