--- a/.i3/config
+++ b/.i3/config
@@ -16,7 +16,7 @@
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:Mononoki 10
+font pango:UbuntuMono-Bront 12
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -127,35 +127,46 @@ bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+		# These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j           resize shrink width 10 px or 10 ppt
-        bindsym k           resize grow height 10 px or 10 ppt
-        bindsym l           resize shrink height 10 px or 10 ppt
-        bindsym semicolon   resize grow width 10 px or 10 ppt
+		# Pressing left will shrink the window’s width.
+		# Pressing right will grow the window’s width.
+		# Pressing up will shrink the window’s height.
+		# Pressing down will grow the window’s height.
+		bindsym j           resize shrink width 10 px or 10 ppt
+		bindsym k           resize grow height 10 px or 10 ppt
+		bindsym l           resize shrink height 10 px or 10 ppt
+		bindsym semicolon   resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left        resize shrink width 10 px or 10 ppt
-        bindsym Down        resize grow height 10 px or 10 ppt
-        bindsym Up          resize shrink height 10 px or 10 ppt
-        bindsym Right       resize grow width 10 px or 10 ppt
+		# same bindings, but for the arrow keys
+		bindsym Left        resize shrink width 10 px or 10 ppt
+		bindsym Down        resize grow height 10 px or 10 ppt
+		bindsym Up          resize shrink height 10 px or 10 ppt
+		bindsym Right       resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
+		# back to normal: Enter or Escape
+		bindsym Return mode "default"
+		bindsym Escape mode "default"
 }
 
 bindsym Mod1+r mode "resize"
 
-# class                 border  backgr. text    indicator
-client.focused          #849492 #59306B #ffffff #2e9ef4
-client.focused_inactive #6e686f #6e686f #f0f0f0 #484e50
-client.unfocused        #6e686f #6e686f #f0f0f0 #292d2e
-client.urgent           #e9e6e6 #BFB8B0 #ffffff #900000
+color_good = "#4A9003"
+
+# debian-bright
+color_bad = "#D70A53"
+color_good = "#75DD0A"
+color_degraded = "#F5B70B"
+
+# $i3-theme-window
+# <clientclass>		<border> <bg> <text> <indicator>
+client.focused          #da2263 #d70a53 #ffffff #eb709b
+client.focused_inactive	#565656 #444444 #ffffff #666666
+client.unfocused 	#373737 #222222 #888888 #444444
+client.urgent           #ec7ea4 #eb709b #ffffff #eb709b
+
+# $i3-background
+exec_always --no-startup-id xsetroot -solid '#000000'
 
 # new_window    1pixel                 broadcastM #<normal|1pixel|none|pixel>
 new_window  normal
@@ -167,15 +178,21 @@ hide_edge_borders   both
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command i3status
-    colors {
-        statusline #efefef
-        background #242424
-        focused_workspace #242424 #59306B  #ffffff 
-        inactive_workspace #242424 #282828 #CCCACA
-        urgent_workspace   #1A1A1A #664742 #1b1b1b
-    }
+	status_command i3status
+	colors {
+		# <bar>
+		background #222222
+		separator  #444444
+		statusline #666666
+
+		# <workclass>       <border> <bg> <text>
+		focused_workspace   #da2263 #d70a53 #ffffff
+		active_workspace    #565656 #444444 #ffffff
+		inactive_workspace  #373737 #222222 #888888
+		urgent_workspace    #ec7ea4 #eb709b #ffffff
+	}
 }
+
 # editors
 bindsym Mod4+e exec gvim
 bindsym Mod4+Shift+e exec subl3
