--- a/.i3/config
+++ b/.i3/config
@@ -16,7 +16,7 @@
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:Inconsolata-dz For Powerline Bold 10
+font pango:Mononoki Bold 10
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
