--- a/.conkyrc
+++ b/.conkyrc
@@ -38,7 +38,7 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     use_xft = true,
-    font = 'Pointfree:size=8',
+    font = 'Meslo LG L For Powerline:Bold:size=8',
     gap_x = 5,
     gap_y = 60,
     minimum_height = 5,
