--- a/.i3/config
+++ b/.i3/config
@@ -16,7 +16,7 @@
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:Pragmata Flash 8
+font pango:Inconsolatazi4 10
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -151,7 +151,7 @@ mode "resize" {
 
 bindsym Mod1+r mode "resize"
 
-client.focused #99cc99 #99cc99 #000000 #2d2d2d
+client.focused #F35595 #F35595 #000000 #2d2d2d
 client.focused_inactive #393939 #393939 #888888 #292d2e
 client.unfocused #2d2d2d #2d2d2d #999999 #292d2e
 client.urgent #2f343a #900000 #ffffff #900000
@@ -175,7 +175,7 @@ bar {
         separator #515151
         background #2d2d2d
         statusline #cccccc
-        focused_workspace #99cc99 #99cc99 #000000
+        focused_workspace #F35595 #F35595 #000000
         active_workspace #333333 #333333 #ffffff
         inactive_workspace #2d2d2d #2d2d2d #999999
         urgent_workspace #f2777a #f2777a #ffffff
@@ -230,4 +230,8 @@ exec xrdb /home/snyp/.Xresources
 exec sh ~/.fehbg
 exec xcompmgr
 #exec mpd
+
+exec xrandr --newmode "1368x768_60.00"   85.25  1368 1440 1576 1784  768 771 781 798 -hsync +vsync
+exec xrandr --addmode eDP-1 1368x768_60.00
+exec spacefm
 
