--- a/.nanorc
+++ b/.nanorc
@@ -1,5 +1,3 @@
-# ~/.nanorc
-
 ## Sample initialization file for GNU nano.
 ##
 ## Please note that you must have configured nano with --enable-nanorc
@@ -7,7 +5,7 @@
 ## DOS or Mac format, and that characters specially interpreted by the
 ## shell should not be escaped here.
 ##
-## To make sure an option is disabled, use "unset <option>".
+## To make sure a value is disabled, use "unset <option>".
 ##
 ## For the options that take parameters, the default value is given.
 ## Other options are unset by default.
@@ -17,15 +15,10 @@
 ## its end.  For example, for the "brackets" option, ""')>]}" will match
 ## ", ', ), >, ], and }.
 
-## Silently ignore problems with unknown directives in the nanorc file.
-## Useful when your nanorc file might be read on systems with multiple
-## versions of nano installed (e.g. your home directory is on NFS).
-# set quiet
-
 ## Use auto-indentation.
 set autoindent
 
-## Back up files to the current filename plus a tilde.
+## Backup files to filename~.
 # set backup
 
 ## The directory to put unique backup files in.
@@ -41,34 +34,32 @@ set autoindent
 ## paragraphs.  They cannot contain blank characters.  Only closing
 ## punctuation, optionally followed by closing brackets, can end
 ## sentences.
+##
 # set brackets ""')>]}"
 
-## Do case-sensitive searches by default.
+## Do case sensitive searches by default.
 # set casesensitive
 
 ## Constantly display the cursor position in the statusbar.  Note that
 ## this overrides "quickblank".
-# set const
+set const
 
-## Use cut-to-end-of-line by default.
+## Use cut to end of line by default.
 # set cut
 
 ## Set the line length for wrapping text and justifying paragraphs.
-## If the value is 0 or less, the wrapping point will be the screen
-## width less this number.
-set fill 80
+## If fill is 0 or less, the line length will be the screen width less
+## this number.
+##
+# set fill -8
 
 ## Enable ~/.nano_history for saving and reading search/replace strings.
 set historylog
 
-## Enable vim-style lock-files.  This is just to let a vim user know you
-## are editing a file [s]he is trying to edit and vice versa. There are
-## no plans to implement vim-style undo state in these files.
-# set locking
-
 ## The opening and closing brackets that can be found by bracket
 ## searches.  They cannot contain blank characters.  The former set must
 ## come before the latter set, and both must be in the same order.
+##
 # set matchbrackets "(<[{)>]}"
 
 ## Use the blank line below the titlebar as extra editing space.
@@ -78,10 +69,13 @@ set historylog
 ## mouse clicks can be used to place the cursor, set the mark (with a
 ## double click), and execute shortcuts.  The mouse will work in the X
 ## Window System, and on the console when gpm is running.
+##
 # set mouse
 
-## Switch on multiple file buffers (inserting a file will put it into
-## a separate buffer).
+## Allow multiple file buffers (inserting a file will put it into a
+## separate buffer).  You must have configured with --enable-multibuffer
+## for this to work.
+##
 # set multibuffer
 
 ## Don't convert files from DOS/Mac format.
@@ -102,11 +96,9 @@ set historylog
 ## Set operating directory.  nano will not read or write files outside
 ## this directory and its subdirectories.  Also, the current directory
 ## is changed to here, so any files are inserted from this dir.  A blank
-## string means the operating-directory feature is turned off.
+## string means the operating directory feature is turned off.
+##
 # set operatingdir ""
-
-## Remember the cursor position in each file for the next editing session.
-# set poslog
 
 ## Preserve the XON and XOFF keys (^Q and ^S).
 # set preserve
@@ -115,18 +107,19 @@ set historylog
 ## paragraphs.  They cannot contain blank characters.  Only closing
 ## punctuation, optionally followed by closing brackets, can end
 ## sentences.
+##
 # set punct "!.?"
 
 ## Do quick statusbar blanking.  Statusbar messages will disappear after
 ## 1 keystroke instead of 26.  Note that "const" overrides this.
+##
 # set quickblank
 
 ## The email-quote string, used to justify email-quoted paragraphs.
 ## This is an extended regular expression if your system supports them,
-## otherwise a literal string.
-## If you have extended regular expression support, the default is:
+## otherwise a literal string.  Default:
 # set quotestr "^([ 	]*[#:>\|}])+"
-## Otherwise:
+## if you have extended regular expression support, otherwise:
 # set quotestr "> "
 
 ## Fix Backspace/Delete confusion problem.
@@ -143,28 +136,26 @@ set regexp
 ## will jump to that beginning (either forwards or backwards).  If the
 ## cursor is already at that position, it will jump to the true
 ## beginning of the line.
-# set smarthome
+set smarthome
 
 ## Use smooth scrolling as the default.
-# set smooth
-
-## Enable soft line wrapping (AKA full-line display).
-# set softwrap
+set smooth
 
 ## Use this spelling checker instead of the internal one.  This option
 ## does not properly have a default value.
+##
 # set speller "aspell -x -c"
 
 ## Allow nano to be suspended.
-# set suspend
+set suspend
 
 ## Use this tab size instead of the default; it must be greater than 0.
-# set tabsize 8
+set tabsize 4
 
 ## Convert typed tabs to spaces.
-# set tabstospaces
+set tabstospaces
 
-## Save automatically on exit; don't prompt.
+## Save automatically on exit, don't prompt.
 # set tempfile
 
 ## Disallow file modification.  Why would you want this in an rcfile? ;)
@@ -173,25 +164,20 @@ set regexp
 ## The two single-column characters used to display the first characters
 ## of tabs and spaces.  187 in ISO 8859-1 (0000BB in Unicode) and 183 in
 ## ISO-8859-1 (0000B7 in Unicode) seem to be good values for these.
-## The default when in a UTF-8 locale:
-# set whitespace "»·"
-## The default otherwise:
-# set whitespace ">."
+# set whitespace "  "
 
 ## Detect word boundaries more accurately by treating punctuation
 ## characters as parts of words.
 # set wordbounds
 
+## Enable the new (EXPERIMENTAL) generic undo code, not just for line cuts
+# set undo
 
-## Paint the interface elements of nano.
-## This is an example; by default there are no colors.
-# set titlecolor brightwhite,blue
-# set statuscolor brightwhite,green
-# set keycolor green
-# set functioncolor yellow
+## Enable soft line wrapping (AKA full line display)
+# set softwrap
 
 
-## Setup of syntax coloring.
+## Color setup
 ##
 ## Format:
 ##
@@ -206,8 +192,8 @@ set regexp
 ## or
 ## icolor foreground,background "regex" ["regex"...]
 ##
-## "color" will do case-sensitive matches, while "icolor" will do
-## case-insensitive matches.
+## "color" will do case sensitive matches, while "icolor" will do case
+## insensitive matches.
 ##
 ## Valid colors: white, black, red, blue, green, yellow, magenta, cyan.
 ## For foreground colors, you may use the prefix "bright" to get a
@@ -220,10 +206,9 @@ set regexp
 ## color will use a transparent color.  If you don't want this, be sure
 ## to set the background color to black or white.
 ##
-## All regexes should be extended regular expressions.
-##
-## If you wish, you may put your syntax definitions in separate files.
-## You can make use of such files as follows:
+## If you wish, you may put your syntaxes in separate files.  You can
+## make use of such files (which can only include "syntax", "color", and
+## "icolor" commands) as follows:
 ##
 ## include "/path/to/syntax_file.nanorc"
 ##
@@ -232,18 +217,118 @@ set regexp
 ## name inside that file.  These names are kept fairly short to make
 ## them easier to remember and faster to type using nano's -Y option.
 ##
-## To include all existing syntax definitions, you can do:
-# include "/usr/share/nano/*.nanorc"
+## All regexes should be extended regular expressions.
 
-
-## Key bindings.
-## See nanorc(5) for more details on this.
+## Key bindings
+## Please see nanorc(5) for more details on this
 ##
-## Here are a few samples to get you going.
+## Here are some samples to get you going
 ##
 # bind M-W nowrap main
 # bind M-A casesens search
 # bind ^S research main
 
-## Set this if your backspace key sends Del most of the time.
-# bind Del backspace all
+## Set this if your backspace key sends delete most of the time (2.1.3+)
+# bind kdel backspace all
+
+
+## Nanorc files
+include "/usr/share/nano/nanorc.nanorc"
+
+## C/C++
+include "/usr/share/nano/c.nanorc"
+
+## Cascading Style Sheets
+include "/usr/share/nano/css.nanorc"
+
+## Debian files
+include "/usr/share/nano/debian.nanorc"
+
+## Gentoo files
+include "/usr/share/nano/gentoo.nanorc"
+
+## HTML
+include "/usr/share/nano/html.nanorc"
+
+## PHP
+include "/usr/share/nano/php.nanorc"
+
+## TCL
+include "/usr/share/nano/tcl.nanorc"
+
+## TeX
+include "/usr/share/nano/tex.nanorc"
+
+## Quoted emails (under e.g. mutt)
+include "/usr/share/nano/mutt.nanorc"
+
+## Patch files
+include "/usr/share/nano/patch.nanorc"
+
+## Manpages
+include "/usr/share/nano/man.nanorc"
+
+## Groff
+include "/usr/share/nano/groff.nanorc"
+
+## Perl
+include "/usr/share/nano/perl.nanorc"
+
+## Python
+include "/usr/share/nano/python.nanorc"
+
+## Ruby
+include "/usr/share/nano/ruby.nanorc"
+
+## Java
+include "/usr/share/nano/java.nanorc"
+
+## AWK
+include "/usr/share/nano/awk.nanorc"
+
+## Assembler
+include "/usr/share/nano/asm.nanorc"
+
+## Bourne shell scripts
+include "/usr/share/nano/sh.nanorc"
+
+## POV-Ray
+include "/usr/share/nano/pov.nanorc"
+
+## XML-type files
+include "/usr/share/nano/xml.nanorc"
+
+
+###########################################
+## syntax highlighting in xorg.conf
+###########################################
+syntax "xorg" "xorg\.conf$"
+color brightwhite "(Section|EndSection|Sub[sS]ection|EndSub[sS]ection)"
+# keywords
+color yellow "[^A-Za-z0-9](Identifier|Screen|InputDevice|Option|RightOf|LeftOf|Driver|RgbPath|FontPath|ModulePath|Load|VendorName|ModelName|BoardName|BusID|Device|Monitor|DefaultDepth|View[pP]ort|Depth|Virtual|Modes|Mode|DefaultColorDepth|Modeline|\+vsync|\+hsync|HorizSync|VertRefresh)[^A-Za-z0-9]"
+# numbers
+color magenta "[0-9]"
+# strings
+color green ""(\\.|[^\"])*""
+# comments
+color blue "#.*"
+
+
+###########################################
+## ini highlighting
+###########################################
+syntax "ini" "\.ini(\.old|~)?$"
+# values
+color brightred "=.*$"
+# equal sign
+color green "="
+# numbers
+color brightblue "-?[0-9\.]+\s*($|;)"
+# ON/OFF
+color brightmagenta "ON|OFF|On|Off|on|off\s*($|;)"
+# sections
+color brightcyan "^\s*\[.*\]"
+# keys
+color cyan "^\s*[a-zA-Z0-9_\.]+"
+# comments
+color brightyellow ";.*$"
