--- a/.i3/config
+++ b/.i3/config
@@ -16,7 +16,7 @@
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:Inconsolatazi4 10
+font pango:Inconsolatazi4 14
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -181,7 +181,7 @@ bar {
         urgent_workspace #f2777a #f2777a #ffffff
     }
 }
-
+subl
 # editors
 bindsym Mod4+e exec gvim
 bindsym Mod4+Shift+e exec subl3
@@ -194,9 +194,9 @@ bindsym Mod4+r exec evince
 
 # terminal emulator
 bindsym Mod4+t exec urxvt
-bindsym Mod4+Shift+t exec termite
+bindsym Mod4+Shift+t exec xfce4-terminal
 # web browser
-bindsym Mod4+w exec firefox
+bindsym Mod4+w exec chromium
 
 # file managers
 bindsym Mod4+f exec spacefm
@@ -234,4 +234,4 @@ exec xcompmgr
 exec xrandr --newmode "1368x768_60.00"   85.25  1368 1440 1576 1784  768 771 781 798 -hsync +vsync
 exec xrandr --addmode eDP-1 1368x768_60.00
 exec spacefm
-
+xset r rate 250 60
