--- a/.i3/config
+++ b/.i3/config
@@ -222,6 +222,24 @@ bindsym Mod1+Shift+g exec systemctl hibernate
 # reboot
 bindsym Mod1+Shift+b exec systemctl reboot
 
+# Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+# Sreen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+
+# Touchpad controls
+bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
+
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play
+bindsym XF86AudioPause exec playerctl pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+
 # autostart
 
 #exec --no-startup-id nm-applet
@@ -234,4 +252,4 @@ exec xcompmgr
 exec xrandr --newmode "1368x768_60.00"   85.25  1368 1440 1576 1784  768 771 781 798 -hsync +vsync
 exec xrandr --addmode eDP-1 1368x768_60.00
 exec spacefm
-xset r rate 250 60
+xset r rate 250 40
