--- a/.i3/config
+++ b/.i3/config
@@ -16,7 +16,7 @@
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:Inconsolatazi4 14
+font pango:Ubuntu Mono 14
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -28,7 +28,7 @@ bindsym Mod1+Return exec xfce4-terminal
 bindsym Mod1+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod1+d exec dmenu_run
+bindsym Mod1+d exec dmenu_run -fn "Ubuntu Mono-16"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -181,7 +181,7 @@ bar {
         urgent_workspace #f2777a #f2777a #ffffff
     }
 }
-subl
+
 # editors
 bindsym Mod4+e exec gvim
 bindsym Mod4+Shift+e exec subl3
@@ -194,7 +194,7 @@ bindsym Mod4+r exec evince
 
 # terminal emulator
 bindsym Mod4+t exec urxvt
-bindsym Mod4+Shift+t exec xfce4-terminal
+bindsym Mod4+Shift+t exec terminator
 # web browser
 bindsym Mod4+w exec chromium
 
@@ -252,4 +252,5 @@ exec xcompmgr
 exec xrandr --newmode "1368x768_60.00"   85.25  1368 1440 1576 1784  768 771 781 798 -hsync +vsync
 exec xrandr --addmode eDP-1 1368x768_60.00
 exec spacefm
-xset r rate 250 40
+exec xset r rate 250 45
+setxkbmap -option "numpad:microsoft"
