--- a/i3/config
+++ b/i3/config
@@ -16,19 +16,19 @@
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:Liberation Mono 12
+font pango:Source Code Pro 10
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
 
 # start a terminal
-bindsym Mod1+Return exec xfce4-terminal
+bindsym Mod1+Return exec urxvt
 
 # kill focused window
 bindsym Mod1+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod1+d exec dmenu_run -fn "Ubuntu Mono-16"
+bindsym Mod1+d exec dmenu_run -fn "Consolas-15"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -76,7 +76,8 @@ bindsym Mod1+e layout toggle split
 bindsym Mod1+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym Mod1+space focus mode_toggle
+
+bindsym Mod1+space exec rofi_run
 
 # focus the parent container
 bindsym Mod1+a focus parent
@@ -151,7 +152,7 @@ mode "resize" {
 
 bindsym Mod1+r mode "resize"
 
-client.focused #F35595 #F35595 #000000 #2d2d2d
+client.focused #A0A0F0 #A0A0F0 #000000 #2d2d2d
 client.focused_inactive #393939 #393939 #888888 #292d2e
 client.unfocused #2d2d2d #2d2d2d #999999 #292d2e
 client.urgent #2f343a #900000 #ffffff #900000
@@ -159,11 +160,15 @@ client.urgent #2f343a #900000 #ffffff #900000
 # $i3-background
 exec_always --no-startup-id xsetroot -solid '#000000'
 
+title_align center
+
 # new_window    1pixel                 broadcastM #<normal|1pixel|none|pixel>
 new_window  normal
 
 #new_float      normal                  #<normal|1pixel|none|pixel>
 hide_edge_borders   both
+
+workspace_layout tabbed
 
 
 # Start i3bar to display a workspace bar (plus the system information i3status
@@ -175,7 +180,7 @@ bar {
         separator #515151
         background #2d2d2d
         statusline #cccccc
-        focused_workspace #F35595 #F35595 #000000
+        focused_workspace #A0A0F0 #A0A0F0 #000000
         active_workspace #333333 #333333 #ffffff
         inactive_workspace #2d2d2d #2d2d2d #999999
         urgent_workspace #f2777a #f2777a #ffffff
@@ -194,12 +199,12 @@ bindsym Mod4+r exec evince
 
 # terminal emulator
 bindsym Mod4+t exec urxvt
-bindsym Mod4+Shift+t exec terminator
+bindsym Mod4+Shift+t exec qterminal
 # web browser
 bindsym Mod4+w exec chromium
 
 # file managers
-bindsym Mod4+f exec spacefm
+bindsym Mod4+f exec thunar
 bindsym Mod4+Shift+f exec nemo
 
 # alsamixer(audio volume)
@@ -249,8 +254,5 @@ exec sh ~/.fehbg
 exec xcompmgr
 #exec mpd
 
-exec xrandr --newmode "1368x768_60.00"   85.25  1368 1440 1576 1784  768 771 781 798 -hsync +vsync
-exec xrandr --addmode eDP-1 1368x768_60.00
-exec spacefm
 exec xset r rate 250 45
-setxkbmap -option "numpad:microsoft"
+exec setxkbmap -option "numpad:microsoft"
