--- a/i3/config
+++ b/i3/config
@@ -13,19 +13,19 @@
 # is used in the bar {} block below. ISO 10646 = Unicode
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 
-font pango: SF Mono 11
+font pango: Terminus 17
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
 
 # start a terminal
-bindsym Mod1+Return exec konsole
+bindsym Mod1+Return exec qterminal
 
 # kill focused window
 bindsym Mod1+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod1+d exec dmenu_run -fn "Consolas-15"
+bindsym Mod1+d exec dmenu_run -fn "mononoki-17"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -46,8 +46,8 @@ bindsym Mod1+Right focus right
 # move focused window
 bindsym Mod1+Shift+j move left
 bindsym Mod1+Shift+k move down
-bindsym Mod1+Shift+l move up
-bindsym Mod1+Shift+semicolon move right
+bindsym Mod1+Shift+i move up
+bindsym Mod1+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym Mod1+Shift+Left move left
@@ -94,6 +94,9 @@ bindsym Mod1+8 workspace 8
 bindsym Mod1+9 workspace 9
 bindsym Mod1+0 workspace 10
 
+bindsym Mod1+Control+l workspace next
+bindsym Mod1+Control+j workspace prev
+
 # move focused container to workspace
 bindsym Mod1+Shift+1 move container to workspace 1
 bindsym Mod1+Shift+2 move container to workspace 2
@@ -118,8 +121,10 @@ bindsym Mod1+Shift+0 move container to workspace 10
 
 # reload the configuration file
 bindsym Mod1+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym Mod1+Shift+r restart
+
 # exit i3 (logs you out of your X session)
 bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
@@ -149,42 +154,62 @@ mode "resize" {
 
 bindsym Mod1+r mode "resize"
 
-client.focused #ffcfda #ffcfda #000000 #505070
-client.focused_inactive #393939 #393939 #888888 #292d2e
-client.unfocused #505070 #505070 #999999 #292d2e
-client.urgent #2f343a #900000 #ffffff #900000
-
 # $i3-background
 exec_always --no-startup-id xsetroot -solid '#000000'
 
 title_align center
 
 # new_window    1pixel                 broadcastM #<normal|1pixel|none|pixel>
-new_window  normal
+new_window normal
 
 #new_float      normal                  #<normal|1pixel|none|pixel>
-hide_edge_borders   both
+hide_edge_borders none
 
+
+# variables de colores
+set $bg-color            #262d38
+set $inactive-bg-color   #262d38
+set $text-color          #f0f07D
+set $inactive-text-color #a0a0a0
+set $urgent-bg-color     #E53935
+
+# window colors
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #00ff00
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
+client.urgent $urgent-bg-color $urgent-bg-color $text-color #00ff00
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-
-	status_command i3status
-
-	colors {
-		separator #515151
-		background #505070
-		statusline #ffcfda
-		focused_workspace #ffcfda #ffcfda #000000
-		active_workspace #333333 #333333 #ffffff
-		inactive_workspace #505070 #505070 #999999
-		urgent_workspace #f2777a #f2777a #ffffff
+        status_command i3status | i3-keyboard-layout i3status
+        #position top
+        font pango: Terminus 19
+        colors {
+                background $bg-color
+                separator #757575
+                #                  border             background         text
+                focused_workspace  $bg-color          #909090          $text-color
+                inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+                urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
 	}
+	height 25
 }
 
+# GAPS
+smart_gaps on
+workspace 1 gaps inner 2
+workspace 1 gaps outer 2
+workspace 2 gaps inner 2
+workspace 2 gaps outer 2
+gaps outer 10
+
+
+# smart_borders on
+
 # editors
-bindsym Mod4+e exec gvim
+bindsym Mod4+e exec nvim-qt
 bindsym Mod4+Shift+e exec subl3
 
 # ide
@@ -194,15 +219,14 @@ bindsym Mod4+i exec qtcreator -style=gtk
 bindsym Mod4+r exec evince
 
 # terminal emulator
-bindsym Mod4+t exec terminator
-bindsym Mod4+Shift+t exec qterminal
+bindsym Mod4+t exec termite
+bindsym Mod4+Shift+t exec urxvt -e nvim -c terminal
 # web browser
-bindsym Mod4+w exec chromium
+bindsym Mod4+w exec firefox
 
 # file managers
 bindsym Mod4+f exec thunar
-bindsym Mod4+Shift+f exec nemo
-bindsym Mod4+g exec drill-search-gtk
+bindsym Mod4+Shift+f exec urxvt -e ranger
 
 # alsamixer(audio volume)
 bindsym Mod4+s exec urxvt -e alsamixer
@@ -210,19 +234,29 @@ bindsym Mod4+s exec urxvt -e alsamixer
 # i3lock
 bindsym Mod4+l exec i3lock
 
+# quickterm
+bindsym Mod4+p exec i3-quickterm
+
 #######
+
+# Keyboard
+bindsym Mod4+space exec i3-keyboard-layout cycle us ru
 
 # poweroff
 bindsym Mod1+Shift+p exec systemctl poweroff
 
 # suspend
-bindsym Mod1+Shift+s exec systemctl suspend
+# bindsym Mod1+Shift+s exec systemctl suspend
 
 # hibernate
 bindsym Mod1+Shift+g exec systemctl hibernate
 
 # reboot
 bindsym Mod1+Shift+b exec systemctl reboot
+
+# screen brightness inc/dec
+bindsym Mod1+Shift+u exec ddc_set_brightness.py 10 --add
+bindsym Mod1+Shift+y exec ddc_set_brightness.py 10 --sub
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
@@ -242,21 +276,16 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-set $i3t_alt_tab        ~/.config/i3/i3t.py n
-set $i3t_alt_shift_tab  ~/.config/i3/i3t.py p
-bindsym Mod1+Tab exec   exec $i3t_alt_tab
-bindsym Mod1+Shift+Tab  exec $i3t_alt_shift_tab
-
 # autostart
 
 #exec --no-startup-id nm-applet
 exec parcellite
 exec xrdb /home/snyp/.Xresources
 exec sh ~/.fehbg
-exec picom
-#exec mpd
+exec xcompmgr -c -l0 -t0 -r0 -o.00
 
 exec xset r rate 250 45
 exec xset m 1 1
 exec setxkbmap -option "numpad:microsoft"
 exec setxkbmap -layout us -option ctrl:nocaps
+exec alttab
