--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,41 @@
-unbind C-b
-set -g prefix C-]
-bind C-] send-prefix
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
-set -gmode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+
+bind r source-file ~/.tmux.conf
+bind-key l last-window
+
+# vim style tmux config
+set -g base-index 1
+
+# Easy config reload
+bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+
+# vi is good
+setw -g mode-keys vi
+
+# mouse behavior
+setw -g mouse on
+
+set-option -g default-terminal screen-256color
+
+bind-key : command-prompt
+bind-key r refresh-client
+bind-key L clear-history
+
+bind-key space next-window
+bind-key bspace previous-window
+bind-key enter next-layout
+
+# use vim-like keys for splits and windows
+bind-key v split-window -h
+bind-key s split-window -v
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+bind-key C-o rotate-window
